--- a/index.htm
+++ b/index.htm
@@ -49,29 +49,19 @@
 
         <ul class="classgrid">
           <li>
-
+            <div class="card-content-wrapper">
             <p class="monospace">GD 220.05</p>
             <h1 id="graphic-design-2">Our Class</h1>
             <p class="monospace"><strong>Spring 2018</strong><br>
             12 Students <br>
             16 Weeks <br>
+          </p>
+        </div>
 
           </li>
-          <li>
-            <div class="card-animation"><span class="f-init">S</span>
-            <span class="l-init">B</span></div>
-            <a class="namelink" target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a>
-            <div class="sociallink-block">
-              <a class="sociallink" target="_blank" href="https://github.com/shbugrais">Github</a>
-              <a class="sociallink"  href="https://codepen.io/shbugrais">Codepen</a>
-            </div>
-            <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/lavieenrose/">a.1 La Vie en Rose</a>
-              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/html/awitl.html">a.2 Weekend</a>
-              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/aysha/hero.html">a.3 Aysha</a>
-            </div>
-          </li>
-          <li style="background-image:url(img/nick3.jpg); background-size:Cover;">
+          
+          <li style="background-image:url(img/nick3.jpg);">
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">N</span>
             <span class="l-init">C</span></div>
             <a class="namelink"  target="_blank" href="http://nclaure.github.io">Nicholas Claure</a>
@@ -83,8 +73,10 @@
               <a class="projectlink" target="_blank" href="https://nclaure.github.io/day3TM/">a.2 Tuesday</a>
               <a class="projectlink" target="_blank" href="https://nclaure.github.io/finalprojjjj/">a.3 Villian</a>
             </div>
+          </div>
           </li>
-          <li style="background-image: url('img/noahmfisher.png'); background-size: cover;">
+          <li style="background-image: url('img/noahmfisher.png');">
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">N</span>
             <span class="l-init">F</span></div>
             <a class="namelink" target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a>
@@ -96,8 +88,10 @@
               <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/daily/">a.2 Saturday</a>
               <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/final/">a.3 Cubic on XP</a>
             </div>
+          </div>
           </li>
           <li style="background-image:url(img/laurenimg.png)">
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">L</span>
             <span class="l-init">J</span></div>
             <a class="namelink"  target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a>
@@ -109,8 +103,10 @@
               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/day-in-the-life/">a.2 Wednesday</a>
                <a class="projectlink" target="_blank" href="https://ljackson01.github.io/superhero-jay-hue/">a.3 Superhero, Jay Hue</a>
             </div>
+          </div>
           </li>
           <li style="background-image:url(img/knifelogo.png);background-size:20%;">
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">S</span>
             <span class="l-init">J</span></div>
             <a class="namelink"  target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a>
@@ -123,8 +119,26 @@
               <a class="projectlink" target="_blank" href="https://github.com/sydneyjohnson/project2/blob/master/blog/index.html">a.2 Saturday</a>
               <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/project-3/facebook.html">a.3 </a>
             </div>
+          </div>
           </li>
-          <li style="background-image:url(img/duck.png);background-size:300%">
+          <li>
+            <div class="card-content-wrapper">
+            <div class="card-animation"><span class="f-init">S</span>
+            <span class="l-init">B</span></div>
+            <a class="namelink" target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a>
+            <div class="sociallink-block">
+              <a class="sociallink" target="_blank" href="https://github.com/shbugrais">Github</a>
+              <a class="sociallink"  href="https://codepen.io/shbugrais">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/lavieenrose/">a.1 La Vie en Rose</a>
+              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/html/awitl.html">a.2 Weekend</a>
+              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/aysha/hero.html">a.3 Aysha</a>
+            </div>
+          </div>
+          </li>
+          <li style="background-image:url(img/duck.png);">
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">S</span>
             <span class="l-init">K</span></div>
             <a class="namelink"  target="_blank" href="http://Skang04.github.io">Samuel Kang</a>
@@ -136,78 +150,10 @@
               <a class="projectlink" target="_blank" href="https://skang04.github.io/day_in_life/">a.2 Wednesday</a>
                <a class="projectlink" target="_blank" href="https://skang04.github.io/final/home">a.3 Red And The Ducks</a>
             </div>
-          </li>
-          <li style="background-image:url(img/kmcartney.jpg);background-size:cover">
-            <div class="card-animation"><span class="f-init">K</span>
-            <span class="l-init">M</span></div>
-            <a class="namelink"  target="_blank" href="http://kmcartney.github.io">Kiley McArtney</a>
-            <div class="sociallink-block">
-              <a class="sociallink"  target="_blank" href="https://github.com/kmcartney">Github</a>
-              <a class="sociallink"  href="https://codepen.io/kmcartney">Codepen</a>
-            </div>
-            <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment1/">a.1 Fairy Feller</a>
-              <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment2/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank" href="http://kmcartney.github.io/Assignment-Three/">a.3 Angler</a>
-            </div>
-          </li>
-          <li style="background-image:url(img/meyers-bg.jpg)">
-            <div class="card-animation"><span class="f-init">Z</span>
-            <span class="l-init">M</span></div>
-            <a class="namelink"  target="_blank" href="http://ZacharyMeyers.github.io">Zachary Meyers</a>
-            <div class="sociallink-block">
-              <a class="sociallink"  target="_blank" href="https://github.com/ZacharyMeyers">Github</a>
-              <a class="sociallink"  href="https://codepen.io/Meyers">Codepen</a>
-            </div>
-            <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/meyerslyric/">a.1 Psycho Killer</a>
-              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/timeline/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/character/">a.3 Character</a>
-            </div>
-          </li>
-          <li style="background-image:url(img/jscaraville.png);background-size:cover;" >
-            <div class="card-animation"><span class="f-init">J</span>
-            <span class="l-init">S</span></div>
-            <a class="namelink"  target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a>
-            <div class="sociallink-block">
-              <a class="sociallink"  target="_blank" href="https://github.com/jscaraville">Github</a>
-              <a class="sociallink"  href="https://codepen.io/jscaraville">Codepen</a>
-            </div>
-            <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/lyricalmapping/">a.1 Fireworks</a>
-              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/day-in-the-life/index.html">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/hero/index.html"> a.3 Willow</a>
-            </div>
-          </li>
-          <li style="background-image: url(img/awhitaker.jpg); background-size: contain;">
-            <div class="card-animation"><span class="f-init">A</span>
-            <span class="l-init">W</span></div>
-            <a class="namelink"  target="_blank" href="http://grwhit20.github.io">August Whitaker</a>
-            <div class="sociallink-block">
-              <a class="sociallink"  target="_blank" href="https://github.com/grwhit20">Github</a>
-              <a class="sociallink"  href="#">Codepen</a>
-            </div>
-            <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/jalo-wiki/">a.1 Jalo</a>
-              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/MY-DAY/">a.2 Monday</a>
-              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/LANDPHILL/">a.3 Landphill</a>
-            </div>
-          </li>
-          <li style="background-image:url(img/pokeball.svg);background-size: 160%;">
-            <div class="card-animation"><span class="f-init">B</span>
-            <span class="l-init">C</span></div>
-            <a class="namelink"  target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a>
-            <div class="sociallink-block">
-              <a class="sociallink"  target="_blank" href="https://github.com/Bclarendon">Github</a>
-              <a class="sociallink"  href="https://codepen.io/bclarendon">Codepen</a>
-            </div>
-            <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://bclarendon.github.io/project1-songscroll/">a.1 Feel It Still</a>
-              <a class="projectlink" target="_blank" href="https://bclarendon.github.io/day-in-the-life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank">a.3 tba</a>
-            </div>
+          </div>
           </li>
           <li style="background-image:url(img/peijung.png);background-repeat: no-repeat;background-position:top;">
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">P</span>
             <span class="l-init">H</span></div>
             <a class="namelink"  target="_blank" href="http://pho01.github.io">Pei Jung Ho</a>
@@ -220,8 +166,92 @@
               <a class="projectlink" target="_blank" href="https://pho01.github.io/some-days/peiday.html">a.2 Thursday</a>
               <a class="projectlink" target="_blank" href="https://pho01.github.io/superhero_Mr.Dream/homepage.html">a.3 Dr.Dream</a>
             </div>
+          </div>
           </li>
+          <li style="background-image:url(img/kmcartney.jpg);">
+            <div class="card-content-wrapper">
+            <div class="card-animation"><span class="f-init">K</span>
+            <span class="l-init">M</span></div>
+            <a class="namelink"  target="_blank" href="http://kmcartney.github.io">Kiley McArtney</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/kmcartney">Github</a>
+              <a class="sociallink"  href="https://codepen.io/kmcartney">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment1/">a.1 Fairy Feller</a>
+              <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment2/">a.2 Tuesday</a>
+              <a class="projectlink" target="_blank" href="http://kmcartney.github.io/Assignment-Three/">a.3 Angler</a>
+            </div>
+          </div>
+          </li>
+          <li style="background-image:url(img/meyers-bg.jpg)">
+            <div class="card-content-wrapper">
+            <div class="card-animation"><span class="f-init">Z</span>
+            <span class="l-init">M</span></div>
+            <a class="namelink"  target="_blank" href="http://ZacharyMeyers.github.io">Zachary Meyers</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/ZacharyMeyers">Github</a>
+              <a class="sociallink"  href="https://codepen.io/Meyers">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/meyerslyric/">a.1 Psycho Killer</a>
+              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/timeline/">a.2 Tuesday</a>
+              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/character/">a.3 Character</a>
+            </div>
+          </div>
+          </li>
+          <li style="background-image:url(img/jscaraville.png);" >
+            <div class="card-content-wrapper">
+            <div class="card-animation"><span class="f-init">J</span>
+            <span class="l-init">S</span></div>
+            <a class="namelink"  target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/jscaraville">Github</a>
+              <a class="sociallink"  href="https://codepen.io/jscaraville">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/lyricalmapping/">a.1 Fireworks</a>
+              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/day-in-the-life/index.html">a.2 Tuesday</a>
+              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/hero/index.html"> a.3 Willow</a>
+            </div>
+          </div>
+          </li>
+
+          <li style="background-image: url(img/awhitaker.jpg); background-size: contain;">
+            <div class="card-content-wrapper">
+            <div class="card-animation"><span class="f-init">A</span>
+            <span class="l-init">W</span></div>
+            <a class="namelink"  target="_blank" href="http://grwhit20.github.io">August Whitaker</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/grwhit20">Github</a>
+              <a class="sociallink"  href="#">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/jalo-wiki/">a.1 Jalo</a>
+              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/MY-DAY/">a.2 Monday</a>
+              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/LANDPHILL/">a.3 Landphill</a>
+            </div>
+          </div>
+          </li>
+          <li style="background-image:url(img/pokeball.svg);background-size: 160%;">
+            <div class="card-content-wrapper">
+            <div class="card-animation"><span class="f-init">B</span>
+            <span class="l-init">C</span></div>
+            <a class="namelink"  target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/Bclarendon">Github</a>
+              <a class="sociallink"  href="https://codepen.io/bclarendon">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://bclarendon.github.io/project1-songscroll/">a.1 Feel It Still</a>
+              <a class="projectlink" target="_blank" href="https://bclarendon.github.io/day-in-the-life/">a.2 Wednesday</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
+            </div>
+          </div>
+          </li>
+          
           <li>
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">M</span>
             <span class="l-init">M</span></div>
             <a class="namelink"  target="_blank" href="http://musclesmunoz.github.io">Maren Munoz</a>
@@ -232,9 +262,11 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://musclesmunoz.github.io/rise-up/">a.1 Rise Up</a>
             </div>
+          </div>
           </li>
 
           <li style="background-image:url(img/spence-bg.png)">
+            <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">S</span>
             <span class="l-init">N</span></div>
             <a class="namelink"  target="_blank" href="http://musclesmunoz.github.io">Spence Nelson</a>
@@ -246,8 +278,8 @@
               <a class="projectlink" target="_blank" href="assignment-1/index.html">a.1 Lyrical Mapping</a>
               <a class="projectlink" target="_blank" href="assignment-1/index.html">a.2 A Day in the Life</a>
               <a class="projectlink" target="_blank" href="assignment-1/index.html">a.3 We Could Be Heroes</a>
-
             </div>
+          </div>
           </li>
         </ul>
 
