--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,7 @@
             </div>
           </div>
           </li>
-          <li style="background-image:url(img/laurenimg.png)">
+          <li style="background-image:url(img/laurenimg.png); background-size:12.5%;">
             <div class="card-content-wrapper">
             <div class="card-animation"><span class="f-init">L</span>
             <span class="l-init">J</span></div>
