--- a/index/index.html
+++ b/index/index.html
@@ -58,11 +58,11 @@
         <p class="monospace">
           <strong>Spring 2018</strong>
           <br/><br/><a href="#useful-resources">Useful Resources</a>
+          <a href="#on-building-layouts">On building layouts:</a>
           <a href="#transitions">Transitions in CSS</a>
           <a href="#creating-animations">Creating Animations in CSS</a>
           <a href="#media-queries--mobile-styles">Media queries &amp; mobile styles:</a>
           <a href="#svg">SVGs: exporting &amp; animating</a>
-          <a href="#on-building-layouts">On building layouts:</a>
           <a href="#jquery-for-basic-interactions">jQuery for Basic Interactions</a>
           <a href="#components">Parting Thoughts</a>
         </p>
@@ -79,6 +79,28 @@
 <a class="pointerlink" href="https://www.w3schools.com/css/">https://www.w3schools.com/css/</a></p>
 <p>A useful <strong>front-end template</strong> for starting a project<br>
 <a class="pointerlink" href="https://www.w3schools.com/css/">https://html5boilerplate.com</a></p>
+
+<h2 id="on-building-layouts">On building layouts:</h2>
+<p>I mentioned in class that there are a few ways to create layouts in HTML. I’ve outlined 3 ways below. <em>Note: You’ll also notice I’ve set up a media query within the Codepen examples for display on smaller viewports.</em></p>
+<p><strong>Method 1: Float</strong> <em>(most widely supported)</em></p>
+<p>One way you can build your layouts is through the “float” property. Here’s the example I shared during class:</p>
+<p><a class="pointerlink" href="https://codepen.io/SpenceJMNelson/pen/aqvXxK">https://codepen.io/SpenceJMNelson/pen/aqvXxK </a></p>
+<p>I have created my layout elements and set them all to “float:left;” Note: Items making up adjacent columns need to add up to 100%. Note what happens when content in one column gets taller than adjacent columns, and compare that with the flexbox codepen.</p>
+<p>for greater insight into how this functions try removing the float attributes in the css frame, or try adjusting the size of the columns. can you make them all equal size while still having them appear next to each other?</p>
+<p><strong>Method 2: Flexbox  <em>(I’d personally recommend this one)</em></strong></p>
+<p>This method is a little more reliable than floating. Here’s a codepen in action:</p>
+<p><a class="pointerlink" href="https://codepen.io/SpenceJMNelson/pen/NywJKV">https://codepen.io/SpenceJMNelson/pen/NywJKV </a></p>
+<p>Whenever you want columns, just wrap the elements you want to appear next to each other inside a div and set that div to  display:flex. You can set the widths to whatever you want and the layout won’t break in the same way it does using floats. Additionally, You’ll note that when the content of one item in a flex layout row gets taller than the others, the height of all the other items grows to match it.</p>
+<p>Here’s a nice guide on using flexbox, with some more advanced uses</p>
+<p><a class="pointerlink" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">https://css-tricks.com/snippets/css/a-guide-to-flexbox/ </a></p>
+<p><strong>Method 3: CSS Grid</strong> <em>(Most advanced, not as widely supported )</em></p>
+<p>This method is designed from the ground up within the last year for creating grids on the web and offers the greatest number of options and flexibility, and allows you to consider grids in both horizontal and vertical axis. Here’s a codepen in action:</p>
+<p><a href="https://codepen.io/SpenceJMNelson/pen/eVeXwy">https://codepen.io/SpenceJMNelson/pen/eVeXwy </a></p>
+<p>Notice how I’m able to define 6 column grid for everything within the “main-wrapper” div with “grid-template-columns: 16.666% 16.666% 16.666% 16.666% 16.666% 16.666%;”, then style the child elements to span columns and rows within that grid. It takes a while to get the hang of it (I’m still figuring it out TBQH), but it is quite powerful.</p>
+<p>A full guide:</p>
+<p><a class="pointerlink" href="https://css-tricks.com/snippets/css/complete-guide-grid/">https://css-tricks.com/snippets/css/complete-guide-grid/ (Links to an external site.)<br>
+</a></p>
+
 
 <h2 id="transitions">Transitions between states</h2>
 
@@ -165,56 +187,99 @@ h1 {
 </code></pre>
 
 <h2 id="svg">SVGs: exporting &amp; animating</h2>
-<p>You can export an svg from illustrator and sketch.</p>
-<pre><code>
-*/CSS*/
-  @keyframes bigbounce{
-  from {
-    transform:translateX(-50%) translateY(-50%) rotate(0);
-  }
-  
-  to {
-    transform:translateX(-50%) translateY(-80%) rotate(30deg);
-  }
-}
+<p>You can export an image as an SVG from illustrator and sketch in the same way you would as a PNG or JPG. Exported SVG code will be in this format, which you can see is somewhat similar to HTML:</p> 
 
+<pre><code>
+  &#x3C;svg class=&#x22;mydrawing&#x22; width=&#x22;138px&#x22; height=&#x22;162px&#x22; viewBox=&#x22;0 0 138 162&#x22; version=&#x22;1.1&#x22; xmlns=&#x22;http://www.w3.org/2000/svg&#x22; xmlns:xlink=&#x22;http://www.w3.org/1999/xlink&#x22;&#x3E;
+      &#x3C;!-- Generator: Sketch 49.3 (51167) - http://www.bohemiancoding.com/sketch --&#x3E;
+      &#x3C;desc&#x3E;Created with Sketch.&#x3C;/desc&#x3E;
+      &#x3C;defs&#x3E;&#x3C;/defs&#x3E;
+      &#x3C;g id=&#x22;Page-1&#x22; stroke=&#x22;none&#x22; stroke-width=&#x22;1&#x22; fill=&#x22;none&#x22; fill-rule=&#x22;evenodd&#x22;&#x3E;
+          &#x3C;circle id=&#x22;Oval&#x22; stroke=&#x22;#000000&#x22; stroke-width=&#x22;2&#x22; stroke-linecap=&#x22;round&#x22; stroke-linejoin=&#x22;round&#x22; cx=&#x22;51.5&#x22; cy=&#x22;49.5&#x22; r=&#x22;48.5&#x22;&#x3E;&#x3C;/circle&#x3E;
+          &#x3C;rect id=&#x22;Rectangle&#x22; stroke=&#x22;#000000&#x22; stroke-width=&#x22;2&#x22; x=&#x22;52&#x22; y=&#x22;50&#x22; width=&#x22;85&#x22; height=&#x22;85&#x22;&#x3E;&#x3C;/rect&#x3E;
+          &#x3C;polygon id=&#x22;Triangle&#x22; stroke=&#x22;#000000&#x22; stroke-width=&#x22;2&#x22; stroke-linecap=&#x22;round&#x22; stroke-linejoin=&#x22;round&#x22; points=&#x22;51.5 76 102 161 1 161&#x22;&#x3E;&#x3C;/polygon&#x3E;
+      &#x3C;/g&#x3E;
+  &#x3C;/svg&#x3E;
 
 </code></pre>
 
+<p>Embedded in the markup, this SVG code will behave the same way as an .svg file linked to in an &#x3C;img&#x3E; tag. Here's the preceding code rendered in the browser:</p> 
 
-<svg width="138px" height="162px" viewBox="0 0 138 162" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 49.3 (51167) - http://www.bohemiancoding.com/sketch -->
-    <desc>Created with Sketch.</desc>
-    <defs></defs>
-    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <circle id="Oval" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" cx="51.5" cy="49.5" r="48.5"></circle>
-        <rect id="Rectangle" stroke="#000000" stroke-width="2" x="52" y="50" width="85" height="85"></rect>
-        <polygon id="Triangle" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="51.5 76 102 161 1 161"></polygon>
-    </g>
-</svg>
+  <svg width="138px" height="162px" viewBox="0 0 138 162" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <!-- Generator: Sketch 49.3 (51167) - http://www.bohemiancoding.com/sketch -->
+      <desc>Created with Sketch.</desc>
+      <defs></defs>
+      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <circle id="Oval" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" cx="51.5" cy="49.5" r="48.5"></circle>
+          <rect id="Rectangle" stroke="#000000" stroke-width="2" x="52" y="50" width="85" height="85"></rect>
+          <polygon id="Triangle" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="51.5 76 102 161 1 161"></polygon>
+      </g>
+  </svg>
 
-<p>Media queries are can be formatted in the following ways:</p>
+<p>The key difference is that if you embed an svg inline, you can animate it just as you would standard HTML markup. I've added some animations here by finding IDs inside the svg code I want to select:</p> 
 
-<h2 id="on-building-layouts">On building layouts:</h2>
-<p>I mentioned in class that there are a few ways to create layouts in HTML. I’ve outlined 3 ways below. <em>Note: You’ll also notice I’ve set up a media query within the Codepen examples for display on smaller viewports.</em></p>
-<p><strong>Method 1: Float</strong> <em>(most widely supported)</em></p>
-<p>One way you can build your layouts is through the “float” property. Here’s the example I shared during class:</p>
-<p><a class="pointerlink" href="https://codepen.io/SpenceJMNelson/pen/aqvXxK">https://codepen.io/SpenceJMNelson/pen/aqvXxK </a></p>
-<p>I have created my layout elements and set them all to “float:left;” Note: Items making up adjacent columns need to add up to 100%. Note what happens when content in one column gets taller than adjacent columns, and compare that with the flexbox codepen.</p>
-<p>for greater insight into how this functions try removing the float attributes in the css frame, or try adjusting the size of the columns. can you make them all equal size while still having them appear next to each other?</p>
-<p><strong>Method 2: Flexbox  <em>(I’d personally recommend this one)</em></strong></p>
-<p>This method is a little more reliable than floating. Here’s a codepen in action:</p>
-<p><a class="pointerlink" href="https://codepen.io/SpenceJMNelson/pen/NywJKV">https://codepen.io/SpenceJMNelson/pen/NywJKV </a></p>
-<p>Whenever you want columns, just wrap the elements you want to appear next to each other inside a div and set that div to  display:flex. You can set the widths to whatever you want and the layout won’t break in the same way it does using floats. Additionally, You’ll note that when the content of one item in a flex layout row gets taller than the others, the height of all the other items grows to match it.</p>
-<p>Here’s a nice guide on using flexbox, with some more advanced uses</p>
-<p><a class="pointerlink" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">https://css-tricks.com/snippets/css/a-guide-to-flexbox/ </a></p>
-<p><strong>Method 3: CSS Grid</strong> <em>(Most advanced, not as widely supported )</em></p>
-<p>This method is designed from the ground up within the last year for creating grids on the web and offers the greatest number of options and flexibility, and allows you to consider grids in both horizontal and vertical axis. Here’s a codepen in action:</p>
-<p><a href="https://codepen.io/SpenceJMNelson/pen/eVeXwy">https://codepen.io/SpenceJMNelson/pen/eVeXwy </a></p>
-<p>Notice how I’m able to define 6 column grid for everything within the “main-wrapper” div with “grid-template-columns: 16.666% 16.666% 16.666% 16.666% 16.666% 16.666%;”, then style the child elements to span columns and rows within that grid. It takes a while to get the hang of it (I’m still figuring it out TBQH), but it is quite powerful.</p>
-<p>A full guide:</p>
-<p><a class="pointerlink" href="https://css-tricks.com/snippets/css/complete-guide-grid/">https://css-tricks.com/snippets/css/complete-guide-grid/ (Links to an external site.)<br>
-</a></p>
+<pre><code>
+
+@keyframes svgtrianglemove{
+  from {
+    transform:translateX(10px)
+  }
+  to {
+    transform:translateX(0px)
+  }
+}
+
+svg.mydrawing #Triangle{
+  animation:svgtrianglemove 1s infinite alternate;
+  transform-origin: 40% 80%;
+}
+
+
+@keyframes svgsquaremove{
+  from {
+    transform:scale(.8)
+  }
+  to {
+    transform:scale(1)
+  }
+}
+
+svg.mydrawing #Rectangle{
+  animation:svgsquaremove 1s infinite alternate;
+  transform-origin: 10% 80%;
+}
+
+@keyframes svgcirclemove{
+  from {
+    transform:rotateX(0deg) rotateY(0deg);
+  }
+  to {
+    transform:rotateX(90deg) rotateY(270deg);
+  }
+} 
+
+svg.mydrawing #Oval{
+  animation:svgcirclemove 1s infinite alternate;
+  transform-origin: 40% 30%;
+}
+
+  
+
+</code></pre>
+
+<svg class="mydrawing" width="138px" height="162px" viewBox="0 0 138 162" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <!-- Generator: Sketch 49.3 (51167) - http://www.bohemiancoding.com/sketch -->
+      <desc>Created with Sketch.</desc>
+      <defs></defs>
+      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <circle id="Oval" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" cx="51.5" cy="49.5" r="48.5"></circle>
+          <rect id="Rectangle" stroke="#000000" stroke-width="2" x="52" y="50" width="85" height="85"></rect>
+          <polygon id="Triangle" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="51.5 76 102 161 1 161"></polygon>
+      </g>
+  </svg>
+
+<p>One thing to note: you'll have to set a "transform origin" when rotating or scaling a given element. The default transformation point for all elements in the drawing is at the center of the SVG itself, not the individual elements themselves. </p> 
+
 <h2 id="jquery-for-basic-interactions">jQuery for Basic Interactions</h2>
 <p>If you want to install jQuery on a page you created from scratch, place this code before the  tag toward the end of your document:</p>
 <pre><code>&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"&gt;&lt;/script&gt;
