--- a/index/index.html
+++ b/index/index.html
@@ -53,7 +53,7 @@
     <div class="main-content-well">
         <p class="monospace">GD | 220.05 | Intro to Interaction Design</p>
 
-        <h1 id="graphic-design-2"><span class="strikethrough">Index</span> <span class="strikethrough">Omnibus</span> <span class="strikethrough">Précis</span>&nbsp;Misc.</h1>
+        <h1 id="graphic-design-2"><span class="strikethrough">Index</span> <span class="strikethrough">Omnibus</span> <span class="strikethrough">Précis</span>&nbsp;Useful stuff.</h1>
         <div class="aside-left monospace">
         <p class="monospace">
           <strong>Spring 2018</strong>
@@ -69,7 +69,7 @@
       </div>
 
       <p class="introcopy">
-        Thanks so much for a great semester. This class was engaged and thoughtful and I really appreciated the way you all dived in to the material ad made it your own. Thanks for bearing with me! Please fill out your surveys with as much feedback as possible to make the next class even better.
+        Thanks so much for a great semester. Here's a review of some of the material we wento over this semester:
       </p>
 
         <h2 id="useful-resources">Useful Resources:</h2>
@@ -312,7 +312,7 @@ svg.mydrawing #Oval{
 </p>
 
 <h3>Seek out answers</h3>
-<p>Everything you see on the web is by it's very nature <strong>open source</strong> open source. DOn't forget that you can always check to see how something is made by using the <strong>inspect tool</strong>. Also don't forget that you can always <strong>Google</strong> questions.
+<p>Everything you see on the web is by it's very nature <strong>open source</strong>. DOn't forget that you can always check to see how something is made by using the <strong>inspect tool</strong>. Also don't forget that you can always <strong>Google</strong> questions.
 </p>
 
 
