--- a/index/index.html
+++ b/index/index.html
@@ -53,7 +53,7 @@
     <div class="main-content-well">
         <p class="monospace">GD | 220.05 | Intro to Interaction Design</p>
 
-        <h1 id="graphic-design-2"><span class="strikethrough">Index</span> <span class="strikethrough">Omnibus</span> <span class="strikethrough">Précis</span>&nbsp;Useful stuff.</h1>
+        <h1 id="graphic-design-2"><span class="strikethrough">Index</span> <span class="strikethrough">Omnibus</span> <span class="strikethrough">Précis</span>&nbsp;Useful Stuff.</h1>
         <div class="aside-left monospace">
         <p class="monospace">
           <strong>Spring 2018</strong>
