--- a/index/index.html
+++ b/index/index.html
@@ -69,7 +69,7 @@
       </div>
 
       <p class="introcopy">
-        Thanks so much for a great semester. Here's a review of some of the material we wento over this semester:
+        Thanks so much for a great semester! Here's a review of some of the material we went over these last 16 weeks:
       </p>
 
         <h2 id="useful-resources">Useful Resources:</h2>
